# claude-connect

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml  react todo.txt  requirements.txt  voice-mode.txt
.claude/: settings.local.json
claude_voice_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: slash-commands.md  terminal-capture-architecture.md  vscode-removal-analysis.md
docs/issues/: slash-command-delivery.md
docs/plans/: 2025-12-31-streaming-content-blocks.md  2025-12-31-structured-content-design.md  2025-12-31-structured-content-implementation.md  2026-01-01-e2e-testing-design.md  2026-01-01-e2e-testing-fix-transcript-correlation.md  2026-01-01-e2e-testing-revised.md  2026-01-01-e2e-testing.md  2026-01-02-sync-sessions-design.md  2026-01-02-sync-sessions-implementation.md  2026-01-03-filter-sessions.md  2026-01-03-remote-permissions-design.md  2026-01-03-remote-permissions-part4-integration.md  2026-01-03-vscode-connections.md  2026-01-05-auto-fix-session-switching.md  2026-01-05-e2e-permission-tests-optimization.md  2026-01-05-fix-transcript-streaming.md  2026-01-05-hooks-and-realtime-messages.md  2026-01-05-true-e2e-test-architecture.md  INDEX.md  e2e-test-efficiency.md
docs/transcripts/: 59d3cf72-4658-466c-b805-3ae2202b7123.jsonl  (+2 more)
ios/: README.md
ios-voice-app/: README.md
scripts/: cleanup_transcripts.py
server/: CLAUDE.md  __init__.py  main.py  run-kokoro.py  tts_utils.py
tests/: TESTS.md  full_test.sh
voice_server/: CLAUDE.md  TESTS.md  __init__.py  content_models.py  context_tracker.py  http_server.py  ios_server.py  pane_parser.py  permission_handler.py  qr_display.py  run-kokoro.py  server.py  session_context.py  session_manager.py  tmux_controller.py  tts_utils.py  usage_checker.py  usage_parser.py  vscode_controller.py
(+383 files in other folders)
