[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-voice-server"
version = "0.1.0"
description = "Voice server for Claude Code iOS app"
requires-python = ">=3.9"
dependencies = [
    "websockets",
    "watchdog",
    "qrcode",
    "pydantic",
]

[project.scripts]
voice-server = "voice_server.ios_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["voice_server*"]
