[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-connect"
version = "0.1.0"
description = "Control Claude Code hands-free from your iPhone"
requires-python = ">=3.9"
dependencies = [
    "websockets>=10.0",
    "watchdog>=3.0",
    "qrcode>=7.0",
    "pydantic>=2.0",
    "aiohttp>=3.9.0",
    # TTS (Kokoro)
    "kokoro>=0.3",
    "soundfile>=0.12",
    "numpy>=1.20",
    # Pin spacy: 3.8.13 requires thinc>=8.3.12 which needs Python >=3.10
    "spacy<3.8.13",
]

[project.scripts]
claude-connect = "voice_server.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["voice_server*"]
